# audio-diarizer

./: .env.example  .gitignore  CLAUDE.md  README.md  debug_diarization.py  debug_preprocessing.py  debug_transcription.py  main.py  pyproject.toml  test_setup.py
.claude/: settings.local.json
deployment/: audio-diarizer-api.service  audio-diarizer-worker.service  install_services.sh
scripts/: deploy_production.sh  setup_cpu.py  setup_models.py  start_dev.sh  start_worker.py  start_worker_with_cudnn.sh
src/audio_diarizer/: audio_processor.py  cli.py  config.py  diarization.py  formatters.py  main.py  models.py  ollama_client.py  transcription.py  worker.py
